<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kapok.schoolcar.MainActivity">

    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
	<item
        android:id="@+id/action_help"
        android:orderInCategory="1"
        android:title="@string/action_help"
        android:showAsAction="never"/>
	<item
        android:id="@+id/action_quit"
        android:orderInCategory="2"
        android:title="@string/action_quit"
        android:showAsAction="never"/>-->
    <!--<item
        android:id="@+id/menu_log"
        android:title="@string/action_log"
        android:showAsAction="never"
        android:icon="@drawable/login"/>-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="1"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="2"
        android:title="@string/action_quit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_log"
        android:title="@string/loginout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/login"/>


</menu>
