<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical" >
   
	<LinearLayout     
	    android:layout_height="match_parent"
	    android:layout_width="fill_parent"
	    android:orientation="vertical"     
	    android:layout_weight="15">
		<!-- <ImageView 
	    	android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:src="@drawable/sdu"
	    	android:scaleType="centerCrop"
	    	
		/>   -->   
		<ImageView 
	    	android:layout_height="wrap_content"
	    	android:layout_width="fill_parent"
	    	android:src="@drawable/sdu"
	    	android:scaleType="fitXY"
		/> 
	</LinearLayout>
	<LinearLayout 
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent"
	    android:orientation="vertical"     
	    android:layout_weight="3">
		<LinearLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:orientation="vertical"
		    >
		    
	  	<TextView 
	            android:layout_width="fill_parent"
	            android:gravity="center"
		        android:textSize="42sp"
		       
	            android:layout_height="wrap_content"></TextView>
		<TextView android:id="@+id/startText"
	            android:layout_width="fill_parent"
	            android:gravity="center"
		        android:textSize="20sp"
		        android:text="@string/server_ip"
	            android:layout_height="wrap_content"></TextView>
		<EditText 
		     android:id="@+id/ip"
	  	       android:layout_gravity="center"
	           android:layout_width="250dip"
	           android:padding="2dip"
	           android:layout_height="50dip"
	           android:gravity="center"
		    />
	  	<TextView 
	  	    	android:gravity="center"    
		        android:textSize="25sp"
		        android:layout_width="fill_parent"
	            android:layout_height="wrap_content"></TextView>
	  	<TextView android:id="@+id/endText"
	  	    	android:gravity="center"    
		        android:textSize="20sp"
		        android:text="@string/server_port"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"></TextView>
	  	<EditText 
	  	      android:id="@+id/port"
	  	       android:layout_gravity="center"
	          android:layout_width="200dip"
	           android:padding="2dip"
	            android:layout_height="50dip"
	           android:inputType="number"
	           android:gravity="center"
		    />
	  
	  	<Button 
	  	    	android:id="@+id/setIpButton"
	  	    	android:layout_marginTop="38dip"
	  	    	android:layout_marginBottom="5dip"
	  	    	android:paddingTop="5dip"
	  	    	android:paddingBottom="5dip"
	  	    	android:paddingLeft="15dip"
	  	    	android:paddingRight="15dip"
	  	       	android:layout_width="170dp"
	  	       	android:text="@string/server_set"
	  	       	android:background="@drawable/new_button"
	           	android:layout_height="50dip"></Button>
	  	</LinearLayout>
	  	
  	</LinearLayout>
</LinearLayout>
