<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
       
    android:orientation="vertical">
	<LinearLayout    
	    android:layout_height="match_parent"
	    android:layout_width="fill_parent" 
	    android:orientation="horizontal"     
	    android:layout_weight="0.7">
		<ImageView     
	    	android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:src="@drawable/sdu"
	    	android:scaleType="centerCrop"
		/>   
	</LinearLayout>
	<LinearLayout 
	    android:layout_height="match_parent"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal" 
	    android:layout_weight="0.5">
	 	<ImageButton      
	        android:id="@+id/teacher"
	    	android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginTop="25dip"
	    	android:layout_marginBottom="25dip"
	    	android:layout_marginRight="20dip"
	    	android:background="@drawable/buttonstyle"
	        android:text="@string/teacher"	 
	        android:textColor="#FAFAFA" 
	        android:textSize="30px"  
	        android:src="@drawable/teachers"
			android:scaleType="centerInside"       
	        android:layout_weight="1"/>
	 	<ImageButton
	        android:id="@+id/student"
	    	android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginTop="25dip"
	    	android:layout_marginBottom="25dip"
	    	android:layout_marginRight="20dip"
	    	android:background="@drawable/buttonstyle"
	        android:text="@string/student"  
	        android:textColor="#FAFAFA" 
	        android:textSize="30px" 
	        android:src="@drawable/students"
			android:scaleType="centerInside"  
	        android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_height="match_parent"
	    android:layout_width="fill_parent"	
	    android:orientation="horizontal" 
	    android:layout_weight="0.5" >
	 <ImageButton
	        android:id="@+id/setting"  
	    	android:layout_height="match_parent"
	    	android:layout_width="match_parent"
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginTop="25dip"
	    	android:layout_marginBottom="25dip"
	    	android:layout_marginRight="20dip"
	    	android:background="@drawable/buttonstyle"
	        android:text="@string/setting"
	        android:textColor="#FAFAFA"
	        android:textSize="30px"
	        android:src="@drawable/set"
			android:scaleType="centerInside"  
	        android:layout_weight="1" />     
	 <ImageButton
	        android:id="@+id/about"    
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"  
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginTop="25dip"
	    	android:layout_marginBottom="25dip"
	    	android:layout_marginRight="20dip"
	    	android:background="@drawable/buttonstyle"
	    	android:layout_weight="1"
	    	android:textColor="#FAFAFA"
	    	android:textSize="30px"
	    	android:src="@drawable/help"
			android:scaleType="centerInside"  
	        android:text="@string/about" />
	</LinearLayout>
</LinearLayout>
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"

    android:orientation="vertical">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="1dp"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">
                <ImageButton
                    android:id="@+id/teacher"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_teacher"
                    android:text="@string/teacher"
                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                />

                <ImageButton
                    android:id="@+id/student"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_student"
                    android:text="@string/student"
                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">
                <ImageButton
                    android:id="@+id/ring"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_ring"

                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    />

                <ImageButton
                    android:id="@+id/ask"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_ask"

                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2">
                <ImageButton
                    android:id="@+id/setting"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_set"

                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    />

                <ImageButton
                    android:id="@+id/about"
                    android:layout_height="fill_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/buttonstyle_help"

                    android:textColor="#FAFAFA"
                    android:textSize="30px"

                    android:scaleType="fitXY"
                    />
            </LinearLayout>
            <!--<ImageButton
                android:id="@+id/setting"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"

                android:background="@drawable/buttonstyle"
                android:text="@string/setting"
                android:textColor="#FAFAFA"
                android:textSize="30px"
                android:src="@drawable/set"
                android:scaleType="fitCenter"
                android:layout_row="0"
                android:layout_column="0" />
            <ImageButton
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:background="@drawable/buttonstyle"

                android:textColor="#FAFAFA"
                android:textSize="30px"
                android:src="@drawable/help"
                android:scaleType="centerInside"
                android:text="@string/about"
                android:layout_row="1"
                android:layout_column="1" />
            <ImageButton
                android:id="@+id/about21"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:background="@drawable/buttonstyle"

                android:textColor="#FAFAFA"
                android:textSize="30px"
                android:src="@drawable/help"
                android:scaleType="centerInside"
                android:text="@string/about"
                android:layout_row="2"
                android:layout_column="0" />
          &lt;!&ndash; android:layout_marginLeft="20dip"
            android:layout_marginTop="25dip"
            android:layout_marginBottom="25dip"
            android:layout_marginRight="20dip"&ndash;&gt;
            <ImageButton
                android:id="@+id/about2"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:background="@drawable/buttonstyle"

                android:textColor="#FAFAFA"
                android:textSize="30px"
                android:src="@drawable/help"
                android:scaleType="centerInside"
                android:text="@string/about"
                android:layout_row="2"
                android:layout_column="1" />-->
        </LinearLayout>

    </FrameLayout>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:focusable="false"
        android:gravity="center"
        android:layout_marginBottom="3dp"
        android:editable="false"
        android:text="@string/call"/>
</LinearLayout>